# htn-cockroachdb-workshop-2022

./: .gitignore  ReadMe.md  airbnbs.csv  books.csv  cli.sh  delete_request.py  extra_books.csv  get_request.py  import_data.py  intro_to_pony_orm.py  intro_to_psycopg2.py  main.py  post_request.py  put_request.py  pyproject.toml  seed_data.py  test_db_connection.py
